# opencv-ruby

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPERS_NOTE.md  Gemfile  History.txt  License.txt  README.md  Rakefile  coverage_report.txt  generate_docs.rb  mkdocs.yml  opencv-ruby.gemspec  opencv_ruby.gemspec  todo.md
ext/: CMakeLists.txt  CMakePresets.json  bindings-linux.yaml  bindings.yaml  build.ninja  cmake-bindings.yaml  manual_updates.diff  manual_updates.md  opencv_ruby-rb.cpp  opencv_ruby-rb.hpp  opencv_ruby.def  opencv_ruby_version.hpp  rice-bindings.yaml  rice_include.hpp  vcpkg.json
ext/opencv2/: CMakeLists.txt  aruco-rb.cpp  aruco-rb.hpp  bgsegm-rb.cpp  bgsegm-rb.hpp  bioinspired-rb.cpp  bioinspired-rb.hpp  calib3d-rb.cpp  calib3d-rb.hpp  ccalib-rb.cpp  ccalib-rb.hpp  core-rb.cpp  core-rb.hpp  core-rb.ipp  core_detect-rb.cpp  core_detect-rb.hpp  cudaarithm-rb.cpp  cudaarithm-rb.hpp  cudabgsegm-rb.cpp  cudabgsegm-rb.hpp  cudacodec-rb.cpp  cudacodec-rb.hpp  cudafeatures2d-rb.cpp  cudafeatures2d-rb.hpp  cudafilters-rb.cpp  cudafilters-rb.hpp  cudaimgproc-rb.cpp  cudaimgproc-rb.hpp  cudalegacy-rb.cpp  cudalegacy-rb.hpp  cudaobjdetect-rb.cpp  cudaobjdetect-rb.hpp  cudaoptflow-rb.cpp  cudaoptflow-rb.hpp  cudastereo-rb.cpp  cudastereo-rb.hpp  cudawarping-rb.cpp  cudawarping-rb.hpp  cudev-rb.cpp  cudev-rb.hpp  (+90 more)
ext/opencv2/aruco/: CMakeLists.txt  aruco_calib-rb.cpp  aruco_calib-rb.hpp  charuco-rb.cpp  charuco-rb.hpp
ext/opencv2/bioinspired/: bioinspired-rb.cpp  bioinspired-rb.hpp  retina-rb.cpp  retina-rb.hpp  retinafasttonemapping-rb.cpp  retinafasttonemapping-rb.hpp  transientareassegmentationmodule-rb.cpp  transientareassegmentationmodule-rb.hpp
ext/opencv2/calib3d/: CMakeLists.txt  calib3d-rb.cpp  calib3d-rb.hpp  calib3d_c-rb.cpp  calib3d_c-rb.hpp
ext/opencv2/ccalib/: CMakeLists.txt  multicalib-rb.cpp  multicalib-rb.hpp  omnidir-rb.cpp  omnidir-rb.hpp  randpattern-rb.cpp  randpattern-rb.hpp
ext/opencv2/core/: CMakeLists.txt  affine-rb.cpp  affine-rb.hpp  affine-rb.ipp  async-rb.cpp  async-rb.hpp  base-rb.cpp  base-rb.hpp  bindings_utils-rb.cpp  bindings_utils-rb.hpp  bufferpool-rb.cpp  bufferpool-rb.hpp  check-rb.cpp  check-rb.hpp  core-rb.cpp  core-rb.hpp  core_c-rb.cpp  core_c-rb.hpp  core_c-rb.ipp  cuda-rb.cpp  cuda-rb.hpp  cuda_stream_accessor-rb.cpp  cuda_stream_accessor-rb.hpp  cuda_types-rb.cpp  cuda_types-rb.hpp  cuda_types-rb.ipp  cv_cpu_dispatch-rb.cpp  cv_cpu_dispatch-rb.hpp  cv_cpu_helper-rb.cpp  cv_cpu_helper-rb.hpp  cvdef-rb.cpp  cvdef-rb.hpp  cvstd-rb.cpp  cvstd-rb.hpp  cvstd-rb.ipp  cvstd.inl-rb.cpp  cvstd.inl-rb.hpp  cvstd_wrapper-rb.cpp  cvstd_wrapper-rb.hpp  cvstd_wrapper-rb.ipp  (+67 more)
ext/opencv2/cudev/: common-rb.cpp  common-rb.hpp
ext/opencv2/datasets/: CMakeLists.txt  ar_hmdb-rb.cpp  ar_hmdb-rb.hpp  ar_sports-rb.cpp  ar_sports-rb.hpp  dataset-rb.cpp  dataset-rb.hpp  fr_adience-rb.cpp  fr_adience-rb.hpp  fr_lfw-rb.cpp  fr_lfw-rb.hpp  gr_chalearn-rb.cpp  gr_chalearn-rb.hpp  gr_skig-rb.cpp  gr_skig-rb.hpp  hpe_humaneva-rb.cpp  hpe_humaneva-rb.hpp  hpe_parse-rb.cpp  hpe_parse-rb.hpp  ir_affine-rb.cpp  ir_affine-rb.hpp  ir_robot-rb.cpp  ir_robot-rb.hpp  is_bsds-rb.cpp  is_bsds-rb.hpp  is_weizmann-rb.cpp  is_weizmann-rb.hpp  msm_epfl-rb.cpp  msm_epfl-rb.hpp  msm_middlebury-rb.cpp  msm_middlebury-rb.hpp  or_imagenet-rb.cpp  or_imagenet-rb.hpp  or_mnist-rb.cpp  or_mnist-rb.hpp  or_pascal-rb.cpp  or_pascal-rb.hpp  or_sun-rb.cpp  or_sun-rb.hpp  pd_caltech-rb.cpp  (+25 more)
ext/opencv2/dnn/: CMakeLists.txt  all_layers-rb.cpp  all_layers-rb.hpp  dict-rb.cpp  dict-rb.hpp  dnn-rb.cpp  dnn-rb.hpp  dnn.inl-rb.cpp  dnn.inl-rb.hpp  layer-rb.cpp  layer-rb.hpp  layer.details-rb.cpp  layer.details-rb.hpp  shape_utils-rb.cpp  shape_utils-rb.hpp  version-rb.cpp  version-rb.hpp
ext/opencv2/face/: CMakeLists.txt  bif-rb.cpp  bif-rb.hpp  face_alignment-rb.cpp  face_alignment-rb.hpp  facemark-rb.cpp  facemark-rb.hpp  facemarkAAM-rb.cpp  facemarkAAM-rb.hpp  facemarkLBF-rb.cpp  facemarkLBF-rb.hpp  facemark_train-rb.cpp  facemark_train-rb.hpp  facerec-rb.cpp  facerec-rb.hpp  mace-rb.cpp  mace-rb.hpp  predict_collector-rb.cpp  predict_collector-rb.hpp
ext/opencv2/features2d/: CMakeLists.txt  features2d-rb.cpp  features2d-rb.hpp
ext/opencv2/flann/: CMakeLists.txt  all_indices-rb.cpp  all_indices-rb.hpp  all_indices-rb.ipp  allocator-rb.cpp  allocator-rb.hpp  any-rb.cpp  any-rb.hpp  any-rb.ipp  autotuned_index-rb.cpp  autotuned_index-rb.hpp  autotuned_index-rb.ipp  composite_index-rb.cpp  composite_index-rb.hpp  composite_index-rb.ipp  config-rb.cpp  config-rb.hpp  defines-rb.cpp  defines-rb.hpp  dist-rb.cpp  dist-rb.hpp  dist-rb.ipp  dummy-rb.cpp  dummy-rb.hpp  dynamic_bitset-rb.cpp  dynamic_bitset-rb.hpp  flann-rb.cpp  flann-rb.hpp  flann_base-rb.cpp  flann_base-rb.hpp  flann_base-rb.ipp  general-rb.cpp  general-rb.hpp  ground_truth-rb.cpp  ground_truth-rb.hpp  heap-rb.cpp  heap-rb.hpp  heap-rb.ipp  hierarchical_clustering_index-rb.cpp  hierarchical_clustering_index-rb.hpp  (+50 more)
ext/opencv2/fuzzy/: CMakeLists.txt  fuzzy_F0_math-rb.cpp  fuzzy_F0_math-rb.hpp  fuzzy_F1_math-rb.cpp  fuzzy_F1_math-rb.hpp  fuzzy_image-rb.cpp  fuzzy_image-rb.hpp  types-rb.cpp  types-rb.hpp
ext/opencv2/hdf/: CMakeLists.txt  hdf5-rb.cpp  hdf5-rb.hpp
ext/opencv2/highgui/: CMakeLists.txt  highgui-rb.cpp  highgui-rb.hpp  highgui_c-rb.cpp  highgui_c-rb.hpp
ext/opencv2/img_hash/: CMakeLists.txt  average_hash-rb.cpp  average_hash-rb.hpp  block_mean_hash-rb.cpp  block_mean_hash-rb.hpp  color_moment_hash-rb.cpp  color_moment_hash-rb.hpp  img_hash_base-rb.cpp  img_hash_base-rb.hpp  marr_hildreth_hash-rb.cpp  marr_hildreth_hash-rb.hpp  phash-rb.cpp  phash-rb.hpp  radial_variance_hash-rb.cpp  (+1 more)
ext/refinements/: CMakeLists.txt  base-rb.cpp  base-rb.hpp  core-rb.cpp  core-rb.hpp  cuda-rb.cpp  cuda-rb.hpp  dnn-rb.cpp  dnn-rb.hpp  hal-rb.cpp  hal-rb.hpp  mat-iterators.hpp  mat-rb.cpp  mat_refinements.cpp  mat_refinements.hpp  matx-rb.cpp  matx_refinements.cpp  matx_refinements.hpp  persistence-rb.cpp  persistence-rb.hpp  ptr-rb.ipp  traits-rb.hpp  types-rb.cpp  types-rb.hpp
ext/tmp/: CMakeLists.txt
(+4792 files in other folders)
