# Subdirectories
add_subdirectory ("core")
add_subdirectory ("dnn")
add_subdirectory ("flann")
add_subdirectory ("stitching")
add_subdirectory ("video")

if ((${OpenCV_VERSION_MAJOR} EQUAL 4 AND ${OpenCV_VERSION_MINOR} GREATER_EQUAL 8) OR ${OpenCV_VERSION_MAJOR} GREATER_EQUAL 5)
add_subdirectory ("objdetect")
endif()

# Sources
target_sources(${CMAKE_PROJECT_NAME} PUBLIC
    "aruco-rb.cpp"
    "bgsegm-rb.cpp"
    "bioinspired-rb.cpp"
    "calib3d-rb.cpp"
    "ccalib-rb.cpp"
    "core-rb.cpp"
    "core_detect-rb.cpp"
    #"cudaarithm-rb.cpp"
    #"cudabgsegm-rb.cpp"
    #"cudacodec-rb.cpp"
    #cudafeatures2d-rb.cpp"
    #"cudafilters-rb.cpp"
    #"cudaimgproc-rb.cpp"
    #"cudaobjdetect-rb.cpp"
    #"cudaoptflow-rb.cpp"
    #"cudastereo-rb.cpp"
    #"cudawarping-rb.cpp"
    #"cudev-rb.cpp"
    "cvconfig-rb.cpp"
    "dnn-rb.cpp"
    "dnn_superres-rb.cpp"
    "dpm-rb.cpp"
    "face-rb.cpp"
    "features2d-rb.cpp"
    "flann-rb.cpp"
    "fuzzy-rb.cpp"
    "hdf-rb.cpp"
    "hfs-rb.cpp"
    "highgui-rb.cpp"
    "img_hash-rb.cpp"
    "imgcodecs-rb.cpp"
    "imgproc-rb.cpp"
    "intensity_transform-rb.cpp"
    "line_descriptor-rb.cpp"
    "mcc-rb.cpp"
    "ml-rb.cpp"
    "objdetect-rb.cpp"
    "opencv-rb.cpp"
    "opencv_modules-rb.cpp"
    "optflow-rb.cpp"
    "phase_unwrapping-rb.cpp"
    "photo-rb.cpp"
    "plot-rb.cpp"
    "rapid-rb.cpp"
    "saliency-rb.cpp"
    "shape-rb.cpp"
    "signal-rb.cpp"
    "stereo-rb.cpp"
    "stitching-rb.cpp"
    "structured_light-rb.cpp"
    "superres-rb.cpp"
    "surface_matching-rb.cpp"
    "text-rb.cpp"
    "tracking-rb.cpp"
    "video-rb.cpp"
    "videoio-rb.cpp"
    "videostab-rb.cpp"
    "wechat_qrcode-rb.cpp"
    "xfeatures2d-rb.cpp"
    "ximgproc-rb.cpp"
    "xobjdetect-rb.cpp"
    "xphoto-rb.cpp"
  )
